show stuff on page

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,7 +1,5 @@
-<h1>Welcome to the Posts Index Page</h1>
+<h1>GeneratorIDs</h1>
 
-<% @posts.each do |post| %>
-<div class="">
-  <a href="/posts/<%= post[:id] %>">See More <%= post[:id] %></a>
-</div>
+<% @posts["result"].each do |array| %>
+  <h3><%= array["generatorID"] %></h3>
 <% end %>
