--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,5 +1,16 @@
-<h1>GeneratorIDs</h1>
+<h1>Memes</h1>
 
-<% @posts["result"].each do |array| %>
-  <h3><%= array["generatorID"] %></h3>
-<% end %>
+<!-- # <% @posts["result"].each do |array| %>
+#   <h3><%= array["displayName"] %></h3>
+# <% end %> -->
+
+<table>
+  <tr>
+    <% @posts["result"].each do |array| %>
+      <th><%= array["displayName"] %></th>
+    <% end %>
+  </tr>
+  <% @posts["result"].each do |array| %>
+    <td> <img src="<%= array["imageUrl"] %>" alt=""> </td>
+  <% end %>
+</table>
